package org.upskill.springboot.Controllers;

public class CategoryController {
}
