@startuml
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
skinparam classAttributeIconSize 0

class CategoryUI {
}

class Category {
    - id : String
    - designation : String
    + Category(designation)
}

class CategoryController {
    + deleteCategory(String id)
}

class CategoryService {
    + deleteCategory(String id)
}

interface CategoryRepository {
    + deleteById(String id)
}

CategoryUI .> CategoryController : requests to delete
CategoryController ..> CategoryService
CategoryService ..> CategoryRepository
CategoryRepository "1" --> "*" Category : category


@enduml